# SCP-firmware

module/: CMakeLists.txt
module/scmi/include/: mod_scmi_std.h
module/scmi/include/internal/: scmi.h
module/scmi_pinctrl/: CMakeLists.txt  Module.cmake
module/scmi_pinctrl/include/: mod_scmi_pinctrl.h
module/scmi_pinctrl/include/internal/: scmi_pinctrl.h
module/scmi_pinctrl/src/: mod_scmi_pinctrl.c
product/optee-fvp/fw/: CMakeLists.txt  Firmware.cmake  config_scmi_pinctrl.c  mock_scmi_pinctrl.h  mock_scmi_pinctrl_drv.c
